1-identity/0-pg.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pg
spec:
  host: pg
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pg
spec:
  hosts:
    - pg
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: pg
        port:
          number: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pg
spec:
  selector:
    app: pg
  ports:
  - name: pg
    port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
  labels:
    app: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: pg
    spec:
      containers:
      - name: pg
        image: "docker-registry.default.svc:5000/nemo/postgres:latest"
        ports:
        - containerPort: 5432
