1-identity/1-dep.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: identity
spec:
  host: identity
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: identity
spec:
  hosts:
    - identity
  http:
  - route:
    - destination:
        host: identity
        subset: v1
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - POST
        - GET
        - DELETE
        - PUT
        - OPTIONS
      allowHeaders:
        - "X-NEMO-AUTH"
        - "Origin"
        - "Accept"
        - "Content-Type"
        - "Authorization"
      exposeHeaders:
        - x-custom-header
      maxAge: 300s
      allowCredentials: true
---
apiVersion: v1
kind: Service
metadata:
  name: identity
  lables:
    app: identity
spec:
  selector:
    app: identity
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: identity
        version: v1
    spec:
      containers:
      - name: identity
        image: docker-registry.default.svc:5000/nemo/identity:0.1
        ports:
        - containerPort: 8080
